# data_science_in_production

./: .gitignore  README.md  clases.ipynb  pyproject.toml
.dvc/: .gitignore  config
content/1-development_environment/: setting_up_oh_my_posh.md
content/2-model_deployment/: deployment.md
content/2-model_deployment/fastapi/: api.py  fastapi.md
content/2-model_deployment/flask/: flask.md  flask_api.py
content/2-model_deployment/streamlit/: streamlit_aplication.py
content/3-data_versioning/: dvc.md
content/3-data_versioning/data/: .gitignore  tips.csv.dvc
content/4-model_tracking/: mlflow.md
content/5-orchestration/airflow/: airflow.cfg  airflow.db
content/5-orchestration/prefect/: my_first_workflow.py  prefect.md
content/data_versioning/: dvc.md
content/data_versioning/data/: tips.csv  tips.csv.dvc
content/developer_tools/: terminal_configuration.md
content/development_environment/: installing_uv.md  installing_vscode.md
content/model_deployment/: deployment.md
content/model_deployment/fastapi/: api.py  fastapi.md  fastapi_pydantic.py
content/model_deployment/streamlit/: streamlit.md  streamlit_fastapi.py
content/model_tracking/: mlflow.ipynb  mlflow.md
content/orchestration/airflow/: workflow.md
content/workflow/: workflow.md
