[project]
name = "data_science_in_production"
version = "0.1.0"
description = "PRoject to learn data science in production"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "dagshub>=0.6.2",
    "dvc>=3.61.0",
    "fastapi>=0.115.12",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "mlflow<2.10.0",
    "prefect>=3.0.0",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
]
